--- a/notebooks/preliminaries.ipynb
+++ b/notebooks/preliminaries.ipynb
@@ -639,15 +639,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3bc2457b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "os.makedirs(os.path.join('.', 'data'), exist_ok=True)\n",
-    "data_file = os.path.join('data', 'house_tiny.csv')\n",
+    "os.makedirs(os.path.join('..', 'data'), exist_ok=True)\n",
+    "data_file = os.path.join('..', 'data', 'house_tiny.csv')\n",
     "with open(data_file, 'w') as f:\n",
     "    f.write('''NumRooms,RoofType,Price\n",
     "NA,NA,127500\n",
@@ -3005,7 +3005,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv311",
    "language": "python",
    "name": "python3"
   },
@@ -3019,7 +3019,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
