--- a/notebooks/builder-guide.ipynb
+++ b/notebooks/builder-guide.ipynb
@@ -1149,13 +1149,8 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Below runs under Google Colab (Pythion3.12)\n",
-        "\n",
-        "%pip install numpy==1.26.4\n",
-        "# %pip install torch torchvision\n",
-        "%pip install d2l==1.0.3 --no-deps"
-      ],
+      "execution_count": 1,
+      "id": "GM6DFcYVanIt",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1163,17 +1158,22 @@
         "id": "GM6DFcYVanIt",
         "outputId": "242c8367-6e72-4fa7-8961-7be747555683"
       },
-      "id": "GM6DFcYVanIt",
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: numpy==1.26.4 in /usr/local/lib/python3.12/dist-packages (1.26.4)\n",
             "Requirement already satisfied: d2l==1.0.3 in /usr/local/lib/python3.12/dist-packages (1.0.3)\n"
           ]
         }
+      ],
+      "source": [
+        "# Below runs under Google Colab (Pythion3.12)\n",
+        "\n",
+        "%pip install numpy==1.26.4\n",
+        "# %pip install torch torchvision\n",
+        "%pip install d2l==1.0.3 --no-deps"
       ]
     },
     {
@@ -1203,7 +1203,6 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(device(type='cpu'),\n",
@@ -1211,8 +1210,9 @@
               " device(type='cuda', index=1))"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1233,13 +1233,8 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "def num_gpus():\n",
-        "    \"\"\"Get the number of available GPUs.\"\"\"\n",
-        "    return torch.cuda.device_count()\n",
-        "\n",
-        "num_gpus()"
-      ],
+      "execution_count": 4,
+      "id": "qLogUs8Gc0fR",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1247,30 +1242,30 @@
         "id": "qLogUs8Gc0fR",
         "outputId": "d11aaa4e-63c4-41d0-e1cb-8760a3703c36"
       },
-      "id": "qLogUs8Gc0fR",
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "def num_gpus():\n",
+        "    \"\"\"Get the number of available GPUs.\"\"\"\n",
+        "    return torch.cuda.device_count()\n",
+        "\n",
+        "num_gpus()"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import torch\n",
-        "\n",
-        "print(\"CUDA available:\", torch.cuda.is_available())\n",
-        "print(\"GPU count:\", torch.cuda.device_count())\n",
-        "print(\"GPU name:\", torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"None\")\n"
-      ],
+      "execution_count": 5,
+      "id": "xycUK2YLd3Jw",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1278,22 +1273,50 @@
         "id": "xycUK2YLd3Jw",
         "outputId": "a646a9b9-1682-4592-c849-d11bdf958349"
       },
-      "id": "xycUK2YLd3Jw",
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "CUDA available: True\n",
             "GPU count: 1\n",
             "GPU name: Tesla T4\n"
           ]
         }
+      ],
+      "source": [
+        "import torch\n",
+        "\n",
+        "print(\"CUDA available:\", torch.cuda.is_available())\n",
+        "print(\"GPU count:\", torch.cuda.device_count())\n",
+        "print(\"GPU name:\", torch.cuda.get_device_name(0) if torch.cuda.is_available() else \"None\")\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "id": "BHTEwOmRd9iQ",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BHTEwOmRd9iQ",
+        "outputId": "d893478c-5c4f-4c4c-bd55-21a1bd7cad6c"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(device(type='cuda', index=0),\n",
+              " device(type='cpu'),\n",
+              " [device(type='cuda', index=0)])"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "def try_gpu(i=0):\n",
         "    \"\"\"Return gpu(i) if exists, otherwise return cpu().\"\"\"\n",
@@ -1306,33 +1329,31 @@
         "    return [gpu(i) for i in range(num_gpus())]\n",
         "\n",
         "try_gpu(), try_gpu(10), try_all_gpus()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BHTEwOmRd9iQ",
-        "outputId": "d893478c-5c4f-4c4c-bd55-21a1bd7cad6c"
-      },
-      "id": "BHTEwOmRd9iQ",
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(device(type='cuda', index=0),\n",
-              " device(type='cpu'),\n",
-              " [device(type='cuda', index=0)])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
+      "id": "ZjYHGxnreWs3",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZjYHGxnreWs3",
+        "outputId": "c56c6c04-114f-470e-f172-60df69f58d55"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "device(type='cpu')"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# By default, tensors are created on the CPU. We can query the device where the tensor is located.\n",
         "\n",
@@ -1341,35 +1362,12 @@
         "\n",
         "# It is important to note that whenever we want to operate on multiple terms, they need to be on the same device. For instance, if we sum two tensors, we need to make sure that both arguments live on the same device.\n",
         "# otherwise the framework would not know where to store the result or even how to decide where to perform the computation.\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZjYHGxnreWs3",
-        "outputId": "c56c6c04-114f-470e-f172-60df69f58d55"
-      },
-      "id": "ZjYHGxnreWs3",
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "device(type='cpu')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X = torch.ones(2, 3, device=try_gpu())\n",
-        "X"
-      ],
+      "execution_count": 12,
+      "id": "53xZhOr1g3Ds",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1377,39 +1375,40 @@
         "id": "53xZhOr1g3Ds",
         "outputId": "1a2061e8-db35-4a4b-9fa1-f1de929463ef"
       },
-      "id": "53xZhOr1g3Ds",
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([[1., 1., 1.],\n",
               "        [1., 1., 1.]], device='cuda:0')"
             ]
           },
+          "execution_count": 12,
           "metadata": {},
-          "execution_count": 12
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "X = torch.ones(2, 3, device=try_gpu())\n",
+        "X"
       ]
     },
     {
       "cell_type": "markdown",
+      "id": "rZkEFJnBf7q1",
+      "metadata": {
+        "id": "rZkEFJnBf7q1"
+      },
       "source": [
         "If we want to compute X + Y, we need to decide where to perform this operation. For instance, as shown in Fig. 6.7.1, we can transfer X to the second GPU and perform the operation there. Do not simply add X and Y, since this will result in an exception. The runtime engine would not know what to do: it cannot find data on the same device and it fails. Since Y lives on the second GPU, we need to move X there before we can add the two.\n",
         "\n",
         "![img](https://github.com/huiminyan2017/pytorch-basics/blob/main/notebooks/Images/Gpu1.png?raw=1)"
-      ],
-      "metadata": {
-        "id": "rZkEFJnBf7q1"
-      },
-      "id": "rZkEFJnBf7q1"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "X.cuda(0) is X"
-      ],
+      "execution_count": 14,
+      "id": "pUuFegQSgfPV",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1417,55 +1416,54 @@
         "id": "pUuFegQSgfPV",
         "outputId": "43dde6da-61cf-4556-8383-e33fbf585d0d"
       },
-      "id": "pUuFegQSgfPV",
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 14
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "X.cuda(0) is X"
       ]
     },
     {
       "cell_type": "markdown",
+      "id": "Ip1UuLVuh1Ib",
+      "metadata": {
+        "id": "Ip1UuLVuh1Ib"
+      },
       "source": [
         "People use GPUs to do machine learning because they expect them to be fast. But transferring variables between devices is slow: much slower than computation. So we want you to be 100% certain that you want to do something slow before we let you do it. If the deep learning framework just did the copy automatically without crashing then you might not realize that you had written some slow code.\n",
         "\n",
         "Transferring data is not only slow, it also makes parallelization a lot more difficult, since we have to wait for data to be sent (or rather to be received) before we can proceed with more operations. This is why copy operations should be taken with great care. As a rule of thumb, many small operations are much worse than one big operation. Moreover, several operations at a time are much better than many single operations interspersed in the code unless you know what you are doing. This is the case since such operations can block if one device has to wait for the other before it can do something else. It is a bit like ordering your coffee in a queue rather than pre-ordering it by phone and finding out that it is ready when you are.\n",
         "\n",
         "Last, when we print tensors or convert tensors to the NumPy format, if the data is not in the main memory, the framework will copy it to the main memory first, resulting in additional transmission overhead. Even worse, it is now subject to the dreaded global interpreter lock that makes everything wait for Python to complete."
-      ],
-      "metadata": {
-        "id": "Ip1UuLVuh1Ib"
-      },
-      "id": "Ip1UuLVuh1Ib"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "id": "0G4hO6-Mfn7X",
+      "metadata": {
+        "id": "0G4hO6-Mfn7X"
+      },
+      "outputs": [],
       "source": [
         "# puts the model parameters on the GPU.\n",
         "net = nn.Sequential(nn.LazyLinear(1))\n",
         "net = net.to(device=try_gpu())"
-      ],
-      "metadata": {
-        "id": "0G4hO6-Mfn7X"
-      },
-      "id": "0G4hO6-Mfn7X",
-      "execution_count": 16,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# when the input is a tensor on the GPU, the model will calculate the result on the same GPU.\n",
-        "net(X)"
-      ],
+      "execution_count": 18,
+      "id": "jCLP262eiB-j",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1473,28 +1471,28 @@
         "id": "jCLP262eiB-j",
         "outputId": "ed08b3ec-e2d0-4108-9ed6-d916b7306fc3"
       },
-      "id": "jCLP262eiB-j",
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "tensor([[-0.6935],\n",
               "        [-0.6935]], device='cuda:0', grad_fn=<AddmmBackward0>)"
             ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# when the input is a tensor on the GPU, the model will calculate the result on the same GPU.\n",
+        "net(X)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# the model parameters are stored on the same GPU.\n",
-        "net[0].weight.data.device"
-      ],
+      "execution_count": 19,
+      "id": "ojtXO77xiOIT",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1502,23 +1500,31 @@
         "id": "ojtXO77xiOIT",
         "outputId": "1ddf039d-b0db-49fa-c861-b349b20d32c8"
       },
-      "id": "ojtXO77xiOIT",
-      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "device(type='cuda', index=0)"
             ]
           },
+          "execution_count": 19,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# the model parameters are stored on the same GPU.\n",
+        "net[0].weight.data.device"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 22,
+      "id": "01yhZrgPiTGq",
+      "metadata": {
+        "id": "01yhZrgPiTGq"
+      },
+      "outputs": [],
       "source": [
         "@d2l.add_to_class(d2l.Trainer)\n",
         "def __init__(self, max_epochs, num_gpus=0, gradient_clip_val=0):\n",
@@ -1540,18 +1546,16 @@
         "    self.model = model\n",
         "\n",
         "# In short, as long as all data and parameters are on the same device, we can learn models efficiently."
-      ],
-      "metadata": {
-        "id": "01yhZrgPiTGq"
-      },
-      "id": "01yhZrgPiTGq",
-      "execution_count": 22,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": ".venv311",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -1565,9 +1569,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.9"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
