--- a/notebooks/natural-language-processing-preTraining.ipynb
+++ b/notebooks/natural-language-processing-preTraining.ipynb
@@ -2782,7 +2782,7 @@
    "id": "f355bc94",
    "metadata": {},
    "source": [
-    "#### Skip-Gram with Global Corpus Statistics\n",
+    "#### Skip-Gram with Global Corpus Statistics (SG-GCS)\n",
     "\n",
     "##### Overview\n",
     "- Defines $q_{ij} = P(w_j | w_i)$ as the conditional probability of context word $w_j$ given center word $w_i$.  \n",
@@ -2791,15 +2791,22 @@
     "\n",
     "##### Key Idea\n",
     "- The model uses **global co-occurrence counts** instead of local context windows.  \n",
-    "- For each center word $w_i$, its context words $w_j$ have multiplicities $z_{ij}$, representing the number of times $w_j$ appears in the context of $w_i$.  \n",
-    "- The skip-gram objective becomes:\n",
-    "\n",
-    "  $$ J = - \\sum_i \\sum_j z_{ij} \\log q_{ij} $$\n",
+    "- For each center word $w_i$, its context words $w_j$ have multiplicities $x_{ij}$, representing the number of times $w_j$ appears in the context of $w_i$.  \n",
+    "- The skip-gram objective becomes: $ J = - \\sum_i \\sum_j x_{ij} \\log q_{ij} $\n",
+    "- This is equivalent to:\n",
+    "  $J = - \\sum_i x_i \\sum_j p_{ij} \\log q_{ij}$, where $p_{ij}$ is the conditional probability $x_{ij}/x_i$\n",
     "\n",
     "##### Interpretation\n",
-    "- This is the **cross-entropy** between the empirical distribution (from corpus statistics) and the model distribution.  \n",
-    "- Minimizing this loss aligns the predicted distribution $q_{ij}$ with corpus co-occurrence data.  \n",
-    "- However, computing softmax over all words is expensive and rare words may dominate the loss.\n",
+    "- $\\sum_j p_{ij} \\log q_{ij}$ is the **cross-entropy** between the empirical distribution (from corpus statistics) and the model distribution. It is also weighted by $x_i$.\n",
+    "- Minimizing this loss aligns the predicted distribution $q_{ij}$ with corpus co-occurrence data $p_{ij}$.  \n",
+    "- Disadvantages:\n",
+    "  - Computing softmax over all words is very expensive\n",
+    "  - Rare words may dominate the loss / a large number of rare events from a large corpus are often modeled by the cross-entropy loss to be assigned with too much weight ？？？\n",
+    "    - The loss sums over all observed (w, c) pairs. And many rare words (“xenolith”, “pterygium”) that appear only once or twice.\n",
+    "\t - A rare event’s probability $\\hat{p}(c|w)$ is often very small, so $-\\log(\\hat{p}(c|w))$ becomes very large.\n",
+    "\t - Therefore, even though the event is rare, it can produce a large gradient update.\n",
+    "\t - When the corpus is huge, you accumulate many such rare pairs → instability or skewed embeddings.\n",
+    "\n",
     "\n",
     "---\n",
     "\n",
@@ -2810,22 +2817,22 @@
     "\n",
     "##### Main Changes\n",
     "1. Replace probabilities with raw co-occurrence counts:  \n",
-    "   $$ f_{ij} = z_{ij}, \\quad \\hat{f}_{ij} = \\exp(u_j \\cdot v_i) $$\n",
+    "   $$ f_{ij} = x_{ij}, \\quad \\hat{f}_{ij} = \\exp(u_j \\cdot v_i) $$\n",
     "\n",
     "2. Use a **squared loss function** instead of cross-entropy:  \n",
-    "   $$ J = (u_j \\cdot v_i + b_i + c_j - \\log z_{ij})^2 $$\n",
+    "   $$ J = (u_j \\cdot v_i + b_i + c_j - \\log x_{ij})^2 $$\n",
     "\n",
     "3. Introduce a **weighting function** to control the influence of frequent/rare pairs:  \n",
-    "   $$ h(z_{ij}) =\n",
+    "   $$ h(x_{ij}) =\n",
     "   \\begin{cases}\n",
-    "   (z_{ij}/a)^\\alpha, & \\text{if } z_{ij} < a \\\\\n",
+    "   (x_{ij}/a)^\\alpha, & \\text{if } x_{ij} < a \\\\\n",
     "   1, & \\text{otherwise}\n",
     "   \\end{cases} $$\n",
     "\n",
     "   Typical values: $a = 100$, $\\alpha = 0.75$.\n",
     "\n",
     "##### Final GloVe Loss Function\n",
-    "$$ J = \\sum_{i,j} h(z_{ij}) (u_j \\cdot v_i + b_i + c_j - \\log z_{ij})^2 $$\n",
+    "$$ J = \\sum_{i,j} h(x_{ij}) (u_j \\cdot v_i + b_i + c_j - \\log x_{ij})^2 $$\n",
     "\n",
     "##### Intuition\n",
     "- GloVe learns embeddings where vector differences capture **meaningful relationships** between words.  \n",
@@ -2858,21 +2865,250 @@
     "- Unrelated words like **fashion** → ratio near 1 but meaningless.\n",
     "\n",
     "##### Mathematical View\n",
-    "We want a function $f$ that captures this ratio:\n",
-    "$$ f(w_i, w_j, w_k) \\approx \\frac{p_{ij}}{p_{ik}} $$\n",
+    "We want a function $f$ that can model this ratio: $f(w_i, w_j, w_k) \\approx \\frac{P_{ij}}{P_{ik}}$\n",
     "\n",
-    "A reasonable choice:\n",
-    "$$ f(w_i, w_j, w_k) = \\frac{\\exp(v_j^T u_i)}{\\exp(v_k^T u_i)} = \\exp((v_j - v_k)^T u_i) $$\n",
+    "A natural exponential form that depends on vector differences: $f(w_i, w_j, w_k) = \\frac{\\exp(u_i^\\top v_j)}{\\exp(u_i^\\top v_k)} = \\exp\\!\\big((v_j - v_k)^\\top u_i\\big)$\n",
     "\n",
-    "Taking the logarithm gives:\n",
-    "$$ v_j^T u_i + b_i + c_j \\approx \\log x_{ij} $$\n",
+    "Equating both sides gives: $\\exp\\!\\big((v_j - v_k)^\\top u_i\\big) \\approx \\frac{P_{ij}}{P_{ik}}$\n",
     "\n",
-    "This leads back to the **GloVe loss**:\n",
-    "$$ J = \\sum_{i,j} h(x_{ij}) (v_i^T u_j + b_i + c_j - \\log x_{ij})^2 $$\n",
+    "Taking the log on both sides yields: $(v_j - v_k)^\\top u_i = \\log P_{ij} - \\log P_{ik}$\n",
+    "\n",
+    "This implies that each dot product $u_i^\\top v_j$ should correspond (up to bias) to the **log of the co-occurrence probability**: $u_i^\\top v_j + b_i + c_j \\approx \\log P_{ij}$\n",
+    "\n",
+    "Since $P_{ij} = \\frac{x_{ij}}{x_i}$, the normalization term $\\log x_i$ can be absorbed into the bias $b_i$, giving: $u_i^\\top v_j + b_i + c_j \\approx \\log x_{ij}$\n",
+    "\n",
+    "To learn embeddings that satisfy this relation across all word pairs, we minimize a **weighted least-squares loss**:\n",
+    "\n",
+    "$J = \\sum_{i,j} f(x_{ij}) \\, (u_i^\\top v_j + b_i + c_j - \\log x_{ij})^2$\n",
+    "\n",
+    "where the weighting function $f(x)$ limits the influence of very frequent or rare pairs, typically:\n",
+    "\n",
+    "$$\n",
+    "f(x) =\n",
+    "\\begin{cases}\n",
+    "(x / x_{\\text{max}})^\\alpha, & x < x_{\\text{max}} \\\\\n",
+    "1, & x \\ge x_{\\text{max}}\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "Common values: $x_{\\text{max}} = 100$, $\\alpha = 0.75$\n",
     "\n",
     "##### Intuition\n",
-    "- GloVe embeds words so that **vector offsets reflect meaning** (e.g., *ice − steam ≈ solid − gas*).  \n",
-    "- It models **semantic relationships** directly through **ratios of co-occurrence probabilities**, making it interpretable and mathematically grounded."
+    "- It models **semantic relationships** directly through **ratios of co-occurrence probabilities**, making it interpretable and mathematically grounded.\n",
+    "- GloVe learns embeddings so that vector differences reflect **log co-occurrence ratios**, e.g.\n",
+    "$\\text{vector}(\\text{king}) - \\text{vector}(\\text{man}) + \\text{vector}(\\text{woman}) \\approx \\text{vector}(\\text{queen})$,\n",
+    "$\\text{vector}(\\text{ice}) - \\text{vector}(\\text{steam}) + \\text{vector}(\\text{solid}) \\approx \\text{vector}(\\text{gas})$\n",
+    "- **Why log ratios?** Logarithms linearize multiplicative relationships and stabilize large differences in probabilities.\n",
+    "- **Why GloVe > SG-GCS:**  \n",
+    "  - Weighted and smooth loss (robust to rare counts)  \n",
+    "  - No costly global softmax normalization  \n",
+    "  - Captures semantic regularities directly through statistics  \n",
+    "  - Works directly from co-occurrence matrix → faster and more interpretable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dabc470",
+   "metadata": {},
+   "source": [
+    "=========================================Subword Embedding======================================="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "664fa22b",
+   "metadata": {},
+   "source": [
+    "#### The fastText Model\n",
+    "\n",
+    "##### Key Idea\n",
+    "- In **word2vec**, each *word* has a single vector.\n",
+    "- In **fastText**, each *word* is represented by the **sum of its subword vectors** (character n-grams).\n",
+    "\n",
+    "This allows the model to capture **morphological information** (prefixes, suffixes, roots) and to represent **rare or unseen words** more effectively.\n",
+    "\n",
+    "##### How Subwords Are Built\n",
+    "1. Add special boundary symbols `<` and `>` around the word to mark start and end.  \n",
+    "   Example: `\"where\"` → `\"<where>\"`.\n",
+    "2. Extract all character n-grams (substrings) of lengths between 3 and 6: “whe”, “her”, “ere”, “wher”, “here”, “<wh”, “re>”, “”, …\n",
+    "3. Each of these subwords gets its own embedding vector.\n",
+    "\n",
+    "##### Word Representation\n",
+    "If a word $w$ has subwords $g \\in G_w$, the word vector is: $v_w = \\sum_{g \\in G_w} z_g$, where $z_g$ is the embedding vector for subword $g$.\n",
+    "So the meaning of a word = **sum of its subword embeddings**.\n",
+    "\n",
+    "##### Advantages\n",
+    "- **Handles rare words** and **out-of-vocabulary (OOV)** words:  \n",
+    "If a word wasn’t seen before, its subwords likely were.\n",
+    "- **Shares parameters** between related words:  \n",
+    "e.g., *running*, *runner*, *runs* share many subwords → better generalization.\n",
+    "- **Drawback:** More parameters and computation — you must sum all subword vectors for every word."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13e09d29",
+   "metadata": {},
+   "source": [
+    "#### Byte Pair Encoding (BPE)\n",
+    "\n",
+    "##### Motivation\n",
+    "FastText fixes subword length (e.g., 3–6 characters).  \n",
+    "To allow *variable-length subwords* and a *controlled vocabulary size*, **Byte Pair Encoding (BPE)** is used.\n",
+    "\n",
+    "##### How BPE Works\n",
+    "1. **Start** with all characters as basic symbols (e.g., `'a', 'b', ..., 'z', '_', [UNK]`).\n",
+    "2. **Count frequencies** of all symbol pairs (like `'t'` + `'h'` → `'th'`).\n",
+    "3. **Merge the most frequent pair** into a new symbol.\n",
+    "4. **Repeat** until you reach a target vocabulary size.\n",
+    "\n",
+    "The result is a vocabulary of subwords that frequently appear together, efficiently capturing both characters and common morphemes.\n",
+    "\n",
+    "##### Example (simplified)\n",
+    "Initial symbols: `[\"l\", \"o\", \"w\", \"e\", \"r\"]`\n",
+    "\n",
+    "Frequent pairs:\n",
+    "- merge `(\"l\", \"o\")` → `\"lo\"`\n",
+    "- merge `(\"lo\", \"w\")` → `\"low\"`\n",
+    "\n",
+    "Final tokens may include `\"low\"`, `\"er\"`, `\"low_er\"` etc.\n",
+    "\n",
+    "##### Why BPE Matters\n",
+    "- Produces a **compact, data-driven subword vocabulary**.  \n",
+    "- Handles both **rare words** and **morphologically rich languages**.\n",
+    "- Used in **modern NLP models** (e.g., GPT-2, RoBERTa) to segment text into efficient subword units.\n",
+    "\n",
+    "#### Insight\n",
+    "Both **fastText** and **BPE** are subword-based solutions to the same problem:  \n",
+    "> How to represent words that are rare, unseen, or morphologically complex.\n",
+    "\n",
+    "- **fastText**: Summation of character n-gram vectors → captures morphology in embeddings.  \n",
+    "- **BPE**: Learns optimal subword units via data compression → efficient tokenization for large-scale NLP models.\n",
+    "\n",
+    "#### Intuitive Comparison\n",
+    "\n",
+    "| Feature | fastText | BPE |\n",
+    "|----------|-----------|-----|\n",
+    "| Subword type | Fixed-length character n-grams | Variable-length learned units |\n",
+    "| Handles OOV words | Yes | Yes |\n",
+    "| Vocabulary size | Larger, unbounded | Controlled, predefined |\n",
+    "| Used in | Classical word embeddings | Modern Transformer tokenization |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c0e9abf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import collections\n",
+    "\n",
+    "symbols = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm',\n",
+    "           'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z',\n",
+    "           '_', '[UNK]']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb2527ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_token_freqs = {'fast_': 4, 'faster_': 3, 'tall_': 5, 'taller_': 4}\n",
+    "token_freqs = {}\n",
+    "for token, freq in raw_token_freqs.items():\n",
+    "    token_freqs[' '.join(list(token))] = raw_token_freqs[token]\n",
+    "token_freqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f94d57cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_max_freq_pair(token_freqs):\n",
+    "    pairs = collections.defaultdict(int)\n",
+    "    for token, freq in token_freqs.items():\n",
+    "        symbols = token.split()\n",
+    "        for i in range(len(symbols) - 1):\n",
+    "            # Key of `pairs` is a tuple of two consecutive symbols\n",
+    "            pairs[symbols[i], symbols[i + 1]] += freq\n",
+    "    return max(pairs, key=pairs.get)  # Key of `pairs` with the max value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61fda373",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_merges = 10\n",
+    "for i in range(num_merges):\n",
+    "    max_freq_pair = get_max_freq_pair(token_freqs)\n",
+    "    token_freqs = merge_symbols(max_freq_pair, token_freqs, symbols)\n",
+    "    print(f'merge #{i + 1}:', max_freq_pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb042289",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(symbols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "076a1991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(list(token_freqs.keys()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bcb4ed41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def segment_BPE(tokens, symbols):\n",
+    "    outputs = []\n",
+    "    for token in tokens:\n",
+    "        start, end = 0, len(token)\n",
+    "        cur_output = []\n",
+    "        # Segment token with the longest possible subwords from symbols\n",
+    "        while start < len(token) and start < end:\n",
+    "            if token[start: end] in symbols:\n",
+    "                cur_output.append(token[start: end])\n",
+    "                start = end\n",
+    "                end = len(token)\n",
+    "            else:\n",
+    "                end -= 1\n",
+    "        if start < len(token):\n",
+    "            cur_output.append('[UNK]')\n",
+    "        outputs.append(' '.join(cur_output))\n",
+    "    return outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21fe0dbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = ['tallest_', 'fatter_']\n",
+    "print(segment_BPE(tokens, symbols))"
    ]
   }
  ],
