--- a/notebooks/NaturalLanguageProcessing-Applications.ipynb
+++ b/notebooks/NaturalLanguageProcessing-Applications.ipynb
@@ -1384,7 +1384,7 @@
    "id": "885b284e",
    "metadata": {},
    "source": [
-    "![as](./Images/GloVERNN.png)"
+    "![as](./Images/GloVeRNN.png)"
    ]
   },
   {
@@ -1503,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e1e699fa",
    "metadata": {},
    "outputs": [
@@ -1957,6 +1957,8 @@
     "lr, num_epochs = 0.01, 5\n",
     "trainer = torch.optim.Adam(net.parameters(), lr=lr)\n",
     "loss = nn.CrossEntropyLoss(reduction=\"none\")\n",
+    "\n",
+    "# make sure you gave gpu, otherwise it will crash with list index out of range\n",
     "d2l.train_ch13(net, train_iter, test_iter, loss, trainer, num_epochs, devices)"
    ]
   },
@@ -2066,7 +2068,7 @@
    "id": "c5b52825",
    "metadata": {},
    "source": [
-    "![1d cross-correlation](./Images/1d-crossCorrelation-3channel.png)"
+    "![1d cross-correlation](./Images/corr1d-multi-in.png)"
    ]
   },
   {
