--- a/notebooks/intro.ipynb
+++ b/notebooks/intro.ipynb
@@ -1,63 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d4c52474",
+   "cell_type": "markdown",
+   "id": "6c7d6e0f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Supervised Learning\n",
+    "### Supervised Learning\n",
     "\n",
-    "## Regression \n",
-    "## Classification\n",
-    "## Tagging: multi-label classification\n",
-    "## Search\n",
-    "## Recommender Systems\n",
-    "## Sequence Learning; sequence-to-sequence learning\n",
+    "#### Regression \n",
+    "#### Classification\n",
+    "#### Tagging: multi-label classification\n",
+    "#### Search\n",
+    "#### Recommender Systems\n",
+    "#### Sequence Learning; sequence-to-sequence learning\n",
     "\n",
-    "# Unsupervised and Self-Supervised Learning\n",
-    "## Clustering\n",
-    "## subspace estimation ; Linear: principal component analysis\n",
-    "## causality  ; probabilistic graphical models \n",
-    "## deep generative models??\n",
     "\n",
-    "# Reinforcement Learning\n",
-    "## Markov decision process: when the environment is fully observed\n",
-    "## contextual bandit problem:  the state does not depend on the previous actions"
+    "### Unsupervised and Self-Supervised Learning\n",
+    "#### Clustering\n",
+    "#### subspace estimation; Linear: principal component analysis\n",
+    "#### causality; probabilistic graphical models \n",
+    "#### deep generative models??\n",
+    "\n",
+    "### Reinforcement Learning\n",
+    "#### Markov decision process: when the environment is fully observed\n",
+    "#### contextual bandit problem:  the state does not depend on the previous actions"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a0568ff0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24bbc768",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "527bd256",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "083e2f4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
