--- a/notebooks/linear-classification.ipynb
+++ b/notebooks/linear-classification.ipynb
@@ -5,7 +5,55 @@
    "id": "bf8f5494",
    "metadata": {},
    "source": [
-    "==================================softmax-regression.md========================================"
+    "=======================================Softmax Regression========================================"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "190e9b61",
+   "metadata": {},
+   "source": [
+    "##### Classification Setup\n",
+    "\n",
+    "- Move from regression (“how much?”) to classification (“which class?”).  \n",
+    "- Labels are represented by **one-hot vectors**.  \n",
+    "- Use a linear model to produce a **logit vector**: $\\mathbf{o} = W \\mathbf{x} + b$\n",
+    "\n",
+    "##### Softmax Function\n",
+    "- Turn logits into probabilities: $\\hat{y}_i = \\frac{\\exp(o_i)}{\\sum_j \\exp(o_j)}$\n",
+    "- The predicted class is the index of the highest logit: $\\arg\\max_j \\hat y_j = \\arg\\max_j o_j$\n",
+    "\n",
+    "##### Vectorized Minibatch\n",
+    "\n",
+    "- For a batch $X \\in \\mathbb{R}^{n \\times d}$, weights $W \\in \\mathbb{R}^{d \\times q}$, bias $b \\in \\mathbb{R}^{1 \\times q}$: $O = X W + b, \\quad \\hat Y = \\text{softmax}(O)$  \n",
+    "- Softmax is applied row-wise to produce probability distributions per example.\n",
+    "\n",
+    "##### Loss: Cross-Entropy\n",
+    "\n",
+    "- Use **maximum likelihood** or **negative log-likelihood**: $-\\log P(\\mathbf{Y} \\mid \\mathbf{X}) = \\sum_i -\\log P(\\mathbf{y}^{(i)} \\mid \\mathbf{x}^{(i)})$\n",
+    "- Loss for one example with one-hot label $\\mathbf{y}$: $\\ell(\\mathbf{y}, \\hat{\\mathbf{y}}) = - \\sum_{j=1}^q y_j \\log \\hat{y}_j$\n",
+    "- Equivalent form using logits: $\\ell(\\mathbf{y}, \\hat{\\mathbf{y}}) = \\log \\sum_{k=1}^q \\exp(o_k) - \\sum_{j=1}^q y_j\\,o_j$\n",
+    "\n",
+    "##### Gradient (Derivative)\n",
+    "\n",
+    "- Derivative of the loss w.r.t. logit $o_j$:  \n",
+    "$\\frac{\\partial \\ell}{\\partial o_j} = \\text{softmax}(o)_j - y_j$\n",
+    "- Interpretation: difference between predicted probability and true label (one-hot).\n",
+    "\n",
+    "##### Information Theory Interpretation\n",
+    "\n",
+    "- **Entropy** of a distribution $P$:  \n",
+    "$H[P] = -\\sum_j P(j) \\log P(j)$\n",
+    "- **Surprisal** of event $j$: $-\\log P(j)$.  \n",
+    "- **Cross-entropy** from true distribution $P$ to model $Q$:  \n",
+    "$H(P, Q) = -\\sum_j P(j) \\log Q(j)$  \n",
+    "- Minimizing cross-entropy ≡ (i) maximizing likelihood; (ii) minimizing expected surprisal.\n",
+    "\n",
+    "##### Practical Considerations & Discussion\n",
+    "\n",
+    "- The combination of softmax + cross-entropy is a foundational probabilistic model for classification.  \n",
+    "- Fully connected layers between input size $d$ and $q$ classes cost $O(dq)$ to compute.  \n",
+    "- For large $d$ or $q$, one might use approximations or compression (e.g., matrix factorization, sparse methods) to reduce computational burden."
    ]
   },
   {
@@ -18,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "33a849af",
    "metadata": {},
    "outputs": [],
@@ -7011,7 +7059,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv311",
+   "display_name": ".venv310",
    "language": "python",
    "name": "python3"
   },
@@ -7025,7 +7073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
