--- a/notebooks/linear-classification.ipynb
+++ b/notebooks/linear-classification.ipynb
@@ -6912,12 +6912,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9276b5b5",
+   "id": "8be3fc2c",
    "metadata": {},
    "source": [
-    "#### Distribution Shifts: Label, Covariate, and Concept Shift\n",
+    "==========================================Environment and Distribution Shift==============================================="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ca8bccd",
+   "metadata": {},
+   "source": [
     "\n",
-    "##### 1. Label Shift (Prior Shift)\n",
+    "Machine learning models often assume that training data and deployment data come from the same distribution. In practice, this assumption often fails,\n",
+    "causing severe performance degradation. This chapter explains why distribution shift occurs, the main types of shift, and methods for mitigation.\n",
+    "\n",
+    "#### 1. Why Distribution Shift Matters\n",
+    "\n",
+    "- Real-world data changes over time.\n",
+    "- Models trained on clean datasets may face noisy, shifting environments.\n",
+    "- Deployed models may influence the environment, creating feedback loops\n",
+    "  that further shift the distribution.\n",
+    "\n",
+    "#### 2. Distribution Shifts: Label, Covariate, and Concept Shift\n",
+    "\n",
+    "##### 2.1 Label Shift (Prior Shift)\n",
     "\n",
     "-   Class distribution changes: $P\\_{train}(Y) \\ne P\\_{test}(Y)$\n",
     "-   Conditional features stay the same: $P(X|Y)$ unchanged\n",
@@ -6930,8 +6949,7 @@
     "    -   Importance weighting: $P\\_{test}(Y)/P\\_{train}(Y)$\n",
     "    -   Post-hoc calibration\n",
     "\n",
-    "\n",
-    "##### 2. Covariate Shift\n",
+    "##### 2.2 Covariate Shift\n",
     "\n",
     "-   Input distribution changes: $P\\_{train}(X) \\ne P\\_{test}(X)$\n",
     "-   Conditional label distribution stays same: $P(Y|X)$ unchanged\n",
@@ -6944,10 +6962,10 @@
     "    -   Data augmentation\n",
     "\n",
     "\n",
-    "##### 3. Concept Shift (Concept Drift)\n",
+    "##### 2.3 Concept Shift (Concept Drift)\n",
     "\n",
     "-   Relationship changes: $P\\_{train}(Y|X) \\ne P\\_{test}(Y|X)$\n",
-    "-   Inputs may stay same\n",
+    "-   Inputs may stay same, The meaning of the labels changes\n",
     "-   Example: Spam patterns evolve; same features → different meaning\n",
     "-   Issues:\n",
     "    -   Requires constant updating\n",
@@ -6955,17 +6973,50 @@
     "-   Fixes:\n",
     "    -   Continuous training / online learning\n",
     "    -   Drift detection\n",
-    "    -   Ensembles with time decay"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "e91e6586",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## TODO, There are more content below I haven't looked at yet"
+    "    -   Ensembles with time decay\n",
+    "\n",
+    "\n",
+    "#### 3. Empirical vs True Risk\n",
+    "\n",
+    "- **Empirical risk**: average loss on training data.\n",
+    "- **True risk**: expected loss on true data distribution.\n",
+    "- Distribution shift breaks the assumption that minimizing empirical risk approximates minimizing true risk.\n",
+    "\n",
+    "#### 4. Correcting Covariate Shift\n",
+    "\n",
+    "If training distribution is $q(x)$ and deployment distribution is $p(x)$, weight samples by: $\\beta(x) = \\frac{p(x)}{q(x)}$\n",
+    "\n",
+    "Practical steps:\n",
+    "1. Train a classifier to discriminate source vs target samples.\n",
+    "2. Use classifier output to estimate importance weights.\n",
+    "3. Train the main model with weighted empirical risk.\n",
+    "\n",
+    "Assumption:\n",
+    "- Deployment distribution must have support within the training distribution.\n",
+    "\n",
+    "#### 5. Correcting Label Shift\n",
+    "\n",
+    "Since $P(x \\mid y)$ is stable:\n",
+    "- Use the model’s confusion matrix (from validation).\n",
+    "- Combine with model predictions on deployment data.\n",
+    "- Solve for new label distribution $p(y)$.\n",
+    "\n",
+    "Weights: $\\beta(y) = \\frac{p(y)}{q(y)}$\n",
+    "\n",
+    "#### 6. Handling Concept Shift\n",
+    "\n",
+    "- Most difficult type.\n",
+    "- Often requires collecting new labeled data and retraining.\n",
+    "- If drift is gradual, online or continual learning can adapt over time.\n",
+    "\n",
+    "#### 7. Learning Paradigms and Environments\n",
+    "\n",
+    "- **Batch learning**: fixed dataset; no updates after training.\n",
+    "- **Online learning**: model updates continuously with new data.\n",
+    "- **Bandit settings**: partial feedback.\n",
+    "- **Reinforcement learning**: model interacts with environment; actions alter future data.\n",
+    "\n",
+    "Each paradigm interacts differently with distribution shift."
    ]
   }
  ],
